@@ -16,7 +16,7 @@ import jmri.jmrit.operations.rollingstock.engines.EngineManager;
 import jmri.jmrit.operations.routes.RouteLocation;
 import jmri.jmrit.operations.setup.Setup;
 import jmri.jmrit.operations.trains.Train;
-import jmri.jmrit.operations.trains.TrainCommon;
+import jmri.jmrit.operations.trains.trainbuilder.TrainCommon;
 import jmri.util.FileUtil;
 
 /**
@@ -39,7 +39,8 @@ public class HtmlConductor extends HtmlTrainCommon {
                     FileUtil.readURL(FileUtil.findURL(Bundle.getMessage(locale,"ConductorSnippet.html"))), 
                     train.getIconName(), 
                     StringEscapeUtils.escapeHtml4(train.getDescription()), 
-                    StringEscapeUtils.escapeHtml4(train.getComment().replaceAll("\n", "<br>")), 
+                    convertToHTMLColor(
+                            StringEscapeUtils.escapeHtml4(train.getCommentWithColor())),
                     Setup.isPrintRouteCommentsEnabled() ? train.getRoute().getComment() : "", 
                     strings.getProperty("Terminated"), 
                     "", // terminated train has nothing to do // NOI18N
@@ -65,10 +66,10 @@ public class HtmlConductor extends HtmlTrainCommon {
                 FileUtil.readURL(FileUtil.findURL(Bundle.getMessage(locale,"ConductorSnippet.html"))), 
                 train.getIconName(), 
                 StringEscapeUtils.escapeHtml4(train.getDescription()),
-                StringEscapeUtils.escapeHtml4(train.getComment().replaceAll("\n", "<br>")), 
+                convertToHTMLColor(StringEscapeUtils.escapeHtml4(train.getCommentWithColor())),
                 Setup.isPrintRouteCommentsEnabled() ? train.getRoute().getComment() : "", 
                 getCurrentAndNextLocation(),
-                getLocationComments().replaceAll("\n", "<br>"),
+                convertToHTMLColor(getLocationComments()),
                 pickupEngines(engineList, location), // engines in separate section
                 pickups, setouts, localMoves,
                 dropEngines(engineList, location), // engines in separate section
@@ -134,12 +135,12 @@ public class HtmlConductor extends HtmlTrainCommon {
             } else if (routeLocation == train.getTrainDepartsRouteLocation()) {
                 builder.append(String.format(locale, strings.getProperty("WorkDepartureTime"), routeLocationName, train  // NOI18N
                         .getFormatedDepartureTime())); // NOI18N
-            } else if (!routeLocation.getDepartureTime().equals("")) {
+            } else if (!routeLocation.getDepartureTimeHourMinutes().equals(RouteLocation.NONE)) {
                 builder.append(String.format(locale, strings.getProperty("WorkDepartureTime"), routeLocationName,  // NOI18N
                         routeLocation.getFormatedDepartureTime())); // NOI18N
             } else if (Setup.isUseDepartureTimeEnabled()
                     && routeLocation != train.getTrainTerminatesRouteLocation()
-                    && !train.getExpectedDepartureTime(routeLocation).equals(Train.ALREADY_SERVICED)) {
+                    && !train.getExpectedArrivalTime(routeLocation).equals(Train.ALREADY_SERVICED)) {
                 builder.append(String.format(locale, strings.getProperty("WorkDepartureTime"), routeLocationName, train  // NOI18N
                         .getExpectedDepartureTime(routeLocation)));
             } else if (!train.getExpectedArrivalTime(routeLocation).equals(Train.ALREADY_SERVICED)) {
@@ -149,9 +150,9 @@ public class HtmlConductor extends HtmlTrainCommon {
                 builder.append(String.format(locale, strings.getProperty("ScheduledWorkAt"), routeLocationName)); // NOI18N
             }
             // add route comment
-            if (!routeLocation.getComment().trim().equals("")) {
+            if (!routeLocation.getComment().isBlank()) {
                 builder.append(String.format(locale, strings.getProperty("RouteLocationComment"), StringEscapeUtils  // NOI18N
-                        .escapeHtml4(routeLocation.getComment())));
+                        .escapeHtml4(routeLocation.getCommentWithColor())));
             }
 
             builder.append(getTrackComments(routeLocation, carList));
@@ -159,7 +160,7 @@ public class HtmlConductor extends HtmlTrainCommon {
             // add location comment
             if (Setup.isPrintLocationCommentsEnabled() && !routeLocation.getLocation().getComment().isEmpty()) {
                 builder.append(String.format(locale, strings.getProperty("LocationComment"), StringEscapeUtils  // NOI18N
-                        .escapeHtml4(routeLocation.getLocation().getComment())));
+                        .escapeHtml4(routeLocation.getLocation().getCommentWithColor())));
             }
         }
 
@@ -185,14 +186,14 @@ public class HtmlConductor extends HtmlTrainCommon {
                 }
             } else {
                 log.debug("No work ({})", routeLocation.getComment());               
-                if (routeLocation.getComment().trim().isEmpty()) {
+                if (routeLocation.getComment().isBlank()) {
                     // no route comment, no work at this location
                     if (train.isShowArrivalAndDepartureTimesEnabled()) {
                         if (routeLocation == train.getTrainDepartsRouteLocation()) {
                             builder.append(String.format(locale, strings
                                     .getProperty("NoScheduledWorkAtWithDepartureTime"), routeLocationName, train  // NOI18N
                                     .getFormatedDepartureTime()));
-                        } else if (!routeLocation.getDepartureTime().isEmpty()) {
+                        } else if (!routeLocation.getDepartureTimeHourMinutes().isEmpty()) {
                             builder.append(String.format(locale, strings
                                     .getProperty("NoScheduledWorkAtWithDepartureTime"), routeLocationName,  // NOI18N
                                     routeLocation.getFormatedDepartureTime()));
@@ -207,26 +208,24 @@ public class HtmlConductor extends HtmlTrainCommon {
                 } else {
                     // if a route comment, then only use location name and route comment, useful for passenger
                     // trains
-                    if (!routeLocation.getComment().equals(RouteLocation.NONE)) {
-                        if (routeLocation.getComment().trim().length() > 0) {
-                            builder.append(String.format(locale, strings.getProperty("CommentAt"), // NOI18N
-                                    routeLocationName, StringEscapeUtils
-                                    .escapeHtml4(routeLocation.getComment())));
-                        }
+                    if (!routeLocation.getComment().isBlank()) {
+                        builder.append(String.format(locale, strings.getProperty("CommentAt"), // NOI18N
+                                routeLocationName, StringEscapeUtils
+                                        .escapeHtml4(routeLocation.getCommentWithColor())));
                     }
                     if (train.isShowArrivalAndDepartureTimesEnabled()) {
                         if (routeLocation == train.getTrainDepartsRouteLocation()) {
                             builder.append(String.format(locale, strings
                                     .getProperty("CommentAtWithDepartureTime"), routeLocationName, train // NOI18N
                                     .getFormatedDepartureTime(), StringEscapeUtils
-                                    .escapeHtml4(routeLocation.getComment())));
-                        } else if (!routeLocation.getDepartureTime().equals(RouteLocation.NONE)) {
+                                            .escapeHtml4(routeLocation.getCommentWithColor())));
+                        } else if (!routeLocation.getDepartureTimeHourMinutes().equals(RouteLocation.NONE)) {
                             builder.append(String.format(locale, strings
                                     .getProperty("CommentAtWithDepartureTime"), routeLocationName, // NOI18N
                                     routeLocation.getFormatedDepartureTime(), StringEscapeUtils
-                                    .escapeHtml4(routeLocation.getComment())));
+                                            .escapeHtml4(routeLocation.getCommentWithColor())));
                         } else if (Setup.isUseDepartureTimeEnabled() &&
-                                !routeLocation.getComment().equals(RouteLocation.NONE)) {
+                                !routeLocation.getComment().isBlank()) {
                             builder.append(String.format(locale, strings
                                     .getProperty("NoScheduledWorkAtWithDepartureTime"), routeLocationName, // NOI18N
                                     train.getExpectedDepartureTime(routeLocation)));
@@ -236,7 +235,7 @@ public class HtmlConductor extends HtmlTrainCommon {
                 // add location comment
                 if (Setup.isPrintLocationCommentsEnabled() && !routeLocation.getLocation().getComment().isEmpty()) {
                     builder.append(String.format(locale, strings.getProperty("LocationComment"), StringEscapeUtils  // NOI18N
-                            .escapeHtml4(routeLocation.getLocation().getComment())));
+                            .escapeHtml4(routeLocation.getLocation().getCommentWithColor())));
                 }
             }
         } else {
